# compliance-assistant

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  MAINTAINERS.md  README.md  poetry.lock.license  pyproject.toml
.github/actions/poetrybuild/: action.yaml
.github/workflows/: publish.yaml  selftest.yaml  test.yaml
complassist/: __init__.py  _clearlydefined.py  _flict.py  _helpers.py  _licensing.py  _logging.py  _sbom_create.py  _sbom_enrich.py  _sbom_full.py  _sbom_generate.py  _sbom_parse.py  main.py
